--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "bugs": {
     "url": "https://github.com/jonkab/testWebApp"
   },
-  "homepage": "https://github.com/testWebApp"
-  ,
+  "homepage": "https://github.com/testWebApp",
   "private": true,
   "engines": {
     "node": ">=0.12.0"
@@ -63,6 +62,7 @@
     "wiredep": "^2.2.2"
   },
   "dependencies": {
+    "handlebars": "^4.0.5",
     "jquery": "^2.2.0",
     "lodash": "^4.2.1",
     "main-bower-files": "^2.5.0",
