--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-cache": "^0.2.8",
     "gulp-clip-empty-files": "^0.1.1",
     "gulp-consolidate": "^0.1.2",
+    "gulp-file-include": "^0.13.7",
     "gulp-csso": "^1.0.0",
     "gulp-eslint": "^0.11.1",
     "gulp-iconfont": "^5.0.1",
